<?xml version="1.0"?>
<package format="2">
  <name>robot_info</name>
  <version>0.1.0</version>
  <description>The robot_info package</description>
  <maintainer email="chatzialex@yahoo.gr">Alexandros Chatzikyriakos</maintainer>
  <license>BSD</license>
  <author email="chatzialex@yahoo.gr">Alexandros Chatzikyriakos</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotinfo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>robotinfo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>robotinfo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
